--- a/src/features/create-post/ui/CroppingStep.module.css
+++ b/src/features/create-post/ui/CroppingStep.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  /*padding: 0 !important;*/
 }
 
 .header {
@@ -18,7 +17,6 @@
 .cropContainer {
   flex: 1;
   min-height: 500px;
-  /*max-height: 70vh;*/
   background-color: var(--color-dark-300);
   position: relative;
   overflow: hidden;
@@ -27,10 +25,12 @@
   align-items: center;
   justify-content: center;
 }
-.btnScale{
+
+.btnScale {
   background-color: var(--color-dark-300);
   opacity: 0.8;
 }
+
 .cropImage {
   position: absolute;
   top: 0;
@@ -64,7 +64,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background-color: var(--color-dark-900);
 }
 
 .darkBottom {
@@ -72,19 +72,19 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background-color: var(--color-dark-900);
 }
 
 .darkLeft {
   position: absolute;
   left: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background-color: var(--color-dark-900);
 }
 
 .darkRight {
   position: absolute;
   right: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background-color: var(--color-dark-900);
 }
 
 /* Рамка выделения */
@@ -135,7 +135,7 @@
   background-color: var(--color-dark-300);
   opacity: 0.8;
   padding: 12px;
-  border-top: 1px solid rgba(255, 255, 255, 0.04);
+  border-top: 1px solid var(--color-dark-300);
   flex-shrink: 0;
   max-height: 120px;
   overflow-y: auto;
@@ -154,44 +154,37 @@
 }
 
 .thumbnailsList::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.05);
+  background-color: var(--color-dark-300);
   border-radius: 2px;
 }
 
 .thumbnailsList::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 2px;
+  background-color: var(--color-dark-100);
 }
 
 .thumbnailsList::-webkit-scrollbar-thumb:hover {
-  background: rgba(255, 255, 255, 0.3);
+  background-color: var(--color-dark-100);
 }
 
 .thumbnail {
   flex-shrink: 0;
   width: 64px;
   height: 64px;
-  border-radius: 8px;
   overflow: hidden;
   border: 2px solid transparent;
-  background: rgba(255, 255, 255, 0.05);
+  background-color: var(--color-dark-300);
   cursor: pointer;
   padding: 0;
   position: relative;
-  transition:
-    border-color 0.2s,
-    transform 0.2s;
+  transition: border-color 0.2s,
+  transform 0.2s;
 }
 
 .thumbnail:hover {
   transform: scale(1.05);
-  border-color: rgba(255, 255, 255, 0.3);
+  border-color: var(--color-dark-100);
 }
 
-.thumbnailActive {
-  border-color: rgba(59, 130, 246, 0.8);
-  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.2);
-}
 
 .thumbnail img {
   width: 100%;
@@ -220,8 +213,7 @@
 }
 
 
-
-.plusCircleOutline{
+.plusCircleOutline {
   width: 36px;
   height: 36px;
   text-align: start;
