--- a/src/features/create-post/ui/PublicationStep.module.css
+++ b/src/features/create-post/ui/PublicationStep.module.css
@@ -6,6 +6,8 @@
   min-width: 492px;
 }
 
+
+
 .header {
   display: flex;
   align-items: center;
@@ -19,7 +21,7 @@
   display: flex;
   flex: 1;
   overflow: hidden;
-  gap: 24px;
+  /*gap: 24px;*/
 }
 
 /* Левая часть - изображение */
@@ -32,14 +34,17 @@
   padding: 24px;
   min-width: 0;
 }
+.wrapper :global(.PublicationStep-module__7eatEW__imageSection) {
+  padding: 0 !important;
+}
 
 .imageContainer {
   position: relative;
+  min-width: 492px;
   width: 100%;
-  max-width: 600px;
+  /*max-width: 600px;*/
   aspect-ratio: 1;
-  background: #0b0b0b;
-  border-radius: 8px;
+  background-color:var(--color-dark-900);
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -59,7 +64,7 @@
   transform: translateY(-50%);
   width: 40px;
   height: 40px;
-  background: rgba(0, 0, 0, 0.6);
+  background-color:var(--color-dark-900);
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 50%;
   display: flex;
@@ -100,13 +105,15 @@
 
 /* Правая часть - форма */
 .formSection {
-  flex: 0 0 400px;
+  /*flex: 0 0 400px;*/
   display: flex;
   flex-direction: column;
   gap: 24px;
   padding: 24px;
   overflow-y: auto;
-  border-left: 1px solid rgba(255, 255, 255, 0.04);
+  min-width: 492px;
+  /*width: 100%;*/
+  /*border-left: 1px solid rgba(255, 255, 255, 0.04);*/
 }
 
 .profile {
